Add 4 new Java 26 JEP samples and update documentation
- Add JEP 526: Lazy Constants (Preview)
- Add JEP 525: Structured Concurrency (Preview)
- Add JEP 517: HTTP/3 Client (Final)
- Add JEP 524: PEM Encodings (Preview)

Now covers 9 out of 10 JEPs in Java 26 with runnable examples.
Updated README.md, QUICKREF.md, and run-all.sh for all features.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>